Fix: left-aligned slogan on Graduation hero image.

--- a/themes/wwwevergreen/css/src/smacss/modules/_homepage-hero.scss
+++ b/themes/wwwevergreen/css/src/smacss/modules/_homepage-hero.scss
@@ -286,7 +286,10 @@
 }
 
 .homepage-hero__copy img{
+	// box model
 	width: 100%;  // For SVG images, in particular
+	// layout
+	display: inline;
 }
 
 /**
